Fix some bugs. Update packages

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,17 @@
+@book{glasman2010science,
+  title={Science research writing for non-native speakers of English},
+  author={Glasman-Deal, Hilary},
+  year={2010},
+  publisher={World Scientific}
+}
+
+@book{gustavii2016write,
+  title={How to write and illustrate a scientific paper},
+  author={Gustavii, Bj{\"o}rn},
+  year={2016},
+  publisher={Cambridge University Press}
+}
+
 @MISC{primes,
    author = "Charles Louis Xavier Joseph de la Vall{\'e}e Poussin",
    note = "A strong form of the prime number theorem, 19th century",
