--- a/template.tex
+++ b/template.tex
@@ -14,6 +14,7 @@
 %% Version 20200224 (February 2020) v2.5.1
 %% Version 20200301 (March 2020) v2.5.2
 %% Version 20200615 (June 2020) v2.5.3
+%% Version 20200928 (September 2020) v2.6
 %%
 %% Instituto Superior de Engenharia de Lisboa
 %% Instituto Politécnico de Lisboa
