--- a/template.tex
+++ b/template.tex
@@ -15,6 +15,8 @@
 %% Version 20200301 (March 2020) v2.5.2
 %% Version 20200615 (June 2020) v2.5.3
 %% Version 20200928 (September 2020) v2.6
+%% Version 20210115 (January 2020) v2.6.1
+
 %%
 %% Instituto Superior de Engenharia de Lisboa
 %% Instituto Politécnico de Lisboa
