--- a/template.tex
+++ b/template.tex
@@ -24,7 +24,7 @@
 %% Project web page at: https://github.com/matpato/thesisisel
 %%
 %% BUGS and SUGGESTIONS: please send email to "matilde.pato@isel.pt"
-%%     or sumit a ticket in the the project web page at
+%%     or submit a ticket in the the project web page at
 %%     https://github.com/matpato/thesisisel
 %%
 %% CONTRIBUTERS are welcome. Please contact "matilde.pato@isel.pt"
@@ -56,7 +56,7 @@
 	]{thesisisel} 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%  BEGINING OF USER COSTUMIZATION
+%%  BEGINNING OF USER CUSTOMIZATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -107,7 +107,7 @@
 \hyphenation{}
 
 %================================================
-% Some default values that you may whish to override
+% Some default values that you may wish to override
 %================================================
 %% Identification: items prefixed with (*) are the default values, as defined in "defaults.tex"
 % (*)\university{Instituto Superior de Engenharia de Lisboa}
